--- a/style.css
+++ b/style.css
@@ -1,6 +1,13 @@
+body {
+    margin: 0%;
+}
+
 #room {
+    display: flex;
+    background-color: #e7eaf6;
     height: 15vh;
     width: 100vw;
+    margin-top: 0;
 }
 
 #editor {
@@ -10,6 +17,8 @@
 }
 
 #reveal {
+    border-radius: 25px;
+    background-color: #a2a8d3;
     height: 80vh;
     width: 75vw;
     float: right;
